demo/nginx/nginx-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo-deploy
  labels:
    app: nginx-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
      - name: nginx-demo
        image: nginx:latest
        ports:
        - containerPort: 80
